karel/parser.output
   0  $accept : %entry% $end

   1  prog : BEGIN_PROG BEGIN_EXEC stmts_opt END_EXEC END_PROG

   2  stmts_opt :
   3            | stmts

   4  stmts : block
   5        | stmts SEMI block
   6        | stmts SEMI

   7  stmt : simple_stmt
   8       | ITERATE INT TIMES block
   9       | WHILE test DO block
  10       | IF if_test THEN block

  11  if_test : test

  12  simple_stmt : TURN_LEFT
  13              | TURN_OFF
  14              | MOVE
  15              | PICK_BEEPER
  16              | PUT_BEEPER
  17              | NEXT_TO_A_BEEPER

  18  define_new : DEFINE_NEW_INSTRUCTION ID AS stmts_opt

  19  block : BEGIN stmts_opt END
  20        | stmt

  21  test : FRONT_IS_CLEAR
  22       | FRONT_IS_BLOCKED
  23       | LEFT_IS_CLEAR
  24       | LEFT_IS_BLOCKED
  25       | RIGHT_IS_CLEAR
  26       | RIGHT_IS_BLOCKED
  27       | NOT_NEXT_TO_A_BEEPER
  28       | NEXT_TO_A_BEEPER
  29       | FACING_NORTH
  30       | NOT_FACING_NORTH
  31       | FACING_EAST
  32       | NOT_FACING_EAST
  33       | FACING_SOUTH
  34       | NOT_FACING_SOUTH
  35       | FACING_WEST
  36       | NOT_FACING_WEST
  37       | ANY_BEEPERS_IN_BEEPER_BAG
  38       | NO_BEEPERS_IN_BEEPER_BAG

  39  %entry% : '\001' prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . prog  (39)

	BEGIN_PROG  shift 3
	.  error

	prog  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	prog : BEGIN_PROG . BEGIN_EXEC stmts_opt END_EXEC END_PROG  (1)

	BEGIN_EXEC  shift 5
	.  error


state 4
	%entry% : '\001' prog .  (39)

	.  reduce 39


state 5
	prog : BEGIN_PROG BEGIN_EXEC . stmts_opt END_EXEC END_PROG  (1)
	stmts_opt : .  (2)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	END_EXEC  reduce 2

	stmts_opt  goto 16
	stmts  goto 17
	block  goto 18
	stmt  goto 19
	simple_stmt  goto 20


state 6
	simple_stmt : MOVE .  (14)

	.  reduce 14


state 7
	simple_stmt : TURN_LEFT .  (12)

	.  reduce 12


state 8
	simple_stmt : TURN_OFF .  (13)

	.  reduce 13


state 9
	block : BEGIN . stmts_opt END  (19)
	stmts_opt : .  (2)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	END  reduce 2

	stmts_opt  goto 21
	stmts  goto 17
	block  goto 18
	stmt  goto 19
	simple_stmt  goto 20


state 10
	simple_stmt : PICK_BEEPER .  (15)

	.  reduce 15


state 11
	simple_stmt : PUT_BEEPER .  (16)

	.  reduce 16


state 12
	simple_stmt : NEXT_TO_A_BEEPER .  (17)

	.  reduce 17


state 13
	stmt : ITERATE . INT TIMES block  (8)

	INT  shift 22
	.  error


state 14
	stmt : WHILE . test DO block  (9)

	NEXT_TO_A_BEEPER  shift 23
	FRONT_IS_CLEAR  shift 24
	FRONT_IS_BLOCKED  shift 25
	LEFT_IS_CLEAR  shift 26
	LEFT_IS_BLOCKED  shift 27
	RIGHT_IS_CLEAR  shift 28
	RIGHT_IS_BLOCKED  shift 29
	NOT_NEXT_TO_A_BEEPER  shift 30
	FACING_NORTH  shift 31
	NOT_FACING_NORTH  shift 32
	FACING_EAST  shift 33
	NOT_FACING_EAST  shift 34
	FACING_SOUTH  shift 35
	NOT_FACING_SOUTH  shift 36
	FACING_WEST  shift 37
	NOT_FACING_WEST  shift 38
	ANY_BEEPERS_IN_BEEPER_BAG  shift 39
	NO_BEEPERS_IN_BEEPER_BAG  shift 40
	.  error

	test  goto 41


state 15
	stmt : IF . if_test THEN block  (10)

	NEXT_TO_A_BEEPER  shift 23
	FRONT_IS_CLEAR  shift 24
	FRONT_IS_BLOCKED  shift 25
	LEFT_IS_CLEAR  shift 26
	LEFT_IS_BLOCKED  shift 27
	RIGHT_IS_CLEAR  shift 28
	RIGHT_IS_BLOCKED  shift 29
	NOT_NEXT_TO_A_BEEPER  shift 30
	FACING_NORTH  shift 31
	NOT_FACING_NORTH  shift 32
	FACING_EAST  shift 33
	NOT_FACING_EAST  shift 34
	FACING_SOUTH  shift 35
	NOT_FACING_SOUTH  shift 36
	FACING_WEST  shift 37
	NOT_FACING_WEST  shift 38
	ANY_BEEPERS_IN_BEEPER_BAG  shift 39
	NO_BEEPERS_IN_BEEPER_BAG  shift 40
	.  error

	test  goto 42
	if_test  goto 43


state 16
	prog : BEGIN_PROG BEGIN_EXEC stmts_opt . END_EXEC END_PROG  (1)

	END_EXEC  shift 44
	.  error


state 17
	stmts_opt : stmts .  (3)
	stmts : stmts . SEMI block  (5)
	stmts : stmts . SEMI  (6)

	SEMI  shift 45
	END_EXEC  reduce 3
	END  reduce 3


state 18
	stmts : block .  (4)

	.  reduce 4


state 19
	block : stmt .  (20)

	.  reduce 20


state 20
	stmt : simple_stmt .  (7)

	.  reduce 7


state 21
	block : BEGIN stmts_opt . END  (19)

	END  shift 46
	.  error


state 22
	stmt : ITERATE INT . TIMES block  (8)

	TIMES  shift 47
	.  error


state 23
	test : NEXT_TO_A_BEEPER .  (28)

	.  reduce 28


state 24
	test : FRONT_IS_CLEAR .  (21)

	.  reduce 21


state 25
	test : FRONT_IS_BLOCKED .  (22)

	.  reduce 22


state 26
	test : LEFT_IS_CLEAR .  (23)

	.  reduce 23


state 27
	test : LEFT_IS_BLOCKED .  (24)

	.  reduce 24


state 28
	test : RIGHT_IS_CLEAR .  (25)

	.  reduce 25


state 29
	test : RIGHT_IS_BLOCKED .  (26)

	.  reduce 26


state 30
	test : NOT_NEXT_TO_A_BEEPER .  (27)

	.  reduce 27


state 31
	test : FACING_NORTH .  (29)

	.  reduce 29


state 32
	test : NOT_FACING_NORTH .  (30)

	.  reduce 30


state 33
	test : FACING_EAST .  (31)

	.  reduce 31


state 34
	test : NOT_FACING_EAST .  (32)

	.  reduce 32


state 35
	test : FACING_SOUTH .  (33)

	.  reduce 33


state 36
	test : NOT_FACING_SOUTH .  (34)

	.  reduce 34


state 37
	test : FACING_WEST .  (35)

	.  reduce 35


state 38
	test : NOT_FACING_WEST .  (36)

	.  reduce 36


state 39
	test : ANY_BEEPERS_IN_BEEPER_BAG .  (37)

	.  reduce 37


state 40
	test : NO_BEEPERS_IN_BEEPER_BAG .  (38)

	.  reduce 38


state 41
	stmt : WHILE test . DO block  (9)

	DO  shift 48
	.  error


state 42
	if_test : test .  (11)

	.  reduce 11


state 43
	stmt : IF if_test . THEN block  (10)

	THEN  shift 49
	.  error


state 44
	prog : BEGIN_PROG BEGIN_EXEC stmts_opt END_EXEC . END_PROG  (1)

	END_PROG  shift 50
	.  error


state 45
	stmts : stmts SEMI . block  (5)
	stmts : stmts SEMI .  (6)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	END_EXEC  reduce 6
	SEMI  reduce 6
	END  reduce 6

	block  goto 51
	stmt  goto 19
	simple_stmt  goto 20


state 46
	block : BEGIN stmts_opt END .  (19)

	.  reduce 19


state 47
	stmt : ITERATE INT TIMES . block  (8)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	.  error

	block  goto 52
	stmt  goto 19
	simple_stmt  goto 20


state 48
	stmt : WHILE test DO . block  (9)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	.  error

	block  goto 53
	stmt  goto 19
	simple_stmt  goto 20


state 49
	stmt : IF if_test THEN . block  (10)

	MOVE  shift 6
	TURN_LEFT  shift 7
	TURN_OFF  shift 8
	BEGIN  shift 9
	PICK_BEEPER  shift 10
	PUT_BEEPER  shift 11
	NEXT_TO_A_BEEPER  shift 12
	ITERATE  shift 13
	WHILE  shift 14
	IF  shift 15
	.  error

	block  goto 54
	stmt  goto 19
	simple_stmt  goto 20


state 50
	prog : BEGIN_PROG BEGIN_EXEC stmts_opt END_EXEC END_PROG .  (1)

	.  reduce 1


state 51
	stmts : stmts SEMI block .  (5)

	.  reduce 5


state 52
	stmt : ITERATE INT TIMES block .  (8)

	.  reduce 8


state 53
	stmt : WHILE test DO block .  (9)

	.  reduce 9


state 54
	stmt : IF if_test THEN block .  (10)

	.  reduce 10


Rules never reduced:
	define_new : DEFINE_NEW_INSTRUCTION ID AS stmts_opt  (18)


43 terminals, 11 nonterminals
40 grammar rules, 55 states
